--- a/myproject/chat/templates/chat/index.html
+++ b/myproject/chat/templates/chat/index.html
@@ -4,7 +4,7 @@
     <meta name="author" content="HubSpot">
     <meta name="description" content="">
     <meta name="generator" content="HubSpot">
-    <title>HubSpot Marketing Hub</title>
+    <title>Moody TV</title>
    
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -197,7 +197,4 @@ a.cta_button{-moz-box-sizing:content-box !important;-webkit-box-sizing:content-b
 </section>
 
 </div>
-
-
-
 </body>
