--- a/myproject/chat/templates/chat/layout.html
+++ b/myproject/chat/templates/chat/layout.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chat</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="{% static 'chat/styles.css' %}" rel="stylesheet">
     {% block extra_head %}
     {% endblock %}
@@ -14,19 +15,34 @@
     <header>
         <nav>
             <ul>
+                {% if user.is_authenticated %}
                 <li><a href="{% url 'chat:index' %}">Home</a></li>
+                {% endif %} 
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                {% if user.is_authenticated %}
+                <li><a href ="#">{{ user.username }}</a></li>
+                <li><a href="{% url 'chat:logout' %}">Logout</a></li>
+                {% endif %}
+
             </ul>
         </nav>
     </header>
-
+    {% if show_main %}
     <main>
         {% block content %}
         <!-- Main content goes here -->
         {% endblock %}
     </main>
+    {% endif %}
 
+    {% if not show_main %}
+    <div>
+        {% block display %}
+        <!-- Div content goes here -->
+        {% endblock %}
+    </div>
+    {% endif %}
     
 
     <!-- Add JavaScript files -->
