--- a/myproject/chat/templates/chat/layout.html
+++ b/myproject/chat/templates/chat/layout.html
@@ -47,6 +47,7 @@
 
     <!-- Add JavaScript files -->
     <script src="{% static 'chat/script.js' %}"></script>
+    <script src="{% static 'chat/home.js' %}"></script>
     {% block extra_scripts %}
     {% endblock %}
 </body>
