--- a/myproject/chat/templates/chat/home.html
+++ b/myproject/chat/templates/chat/home.html
@@ -114,7 +114,7 @@ textarea::placeholder {
                     <label for="emotion">Emotion</label>
                     <input type="text" id="emotion" name="emotion" placeholder="Enter your emotion" required>
                 </div>
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit"  id ="loading"class="btn">Submit</button>
             </form>
         </div>
         <div class="image">
